fix on gap mobile

--- a/src/cmps/Logo/Logo.scss
+++ b/src/cmps/Logo/Logo.scss
@@ -1,13 +1,24 @@
 
         @import "./src/styles/setup";
         .logo {
+                height: 100%;
                 img{
+                        position: relative;
                         margin-right: 5px;
-                        max-width: 40px;
+                        width: 40px;
+                        z-index: 99;
+                        @include respond(max-narrow){
+                               display:none;
+                        }
+                        
                 }
-                font-family: $logo-font;
-                font-size: rem(35px);
-                color:$color-white;
-                letter-spacing: 1px;
+                span{
+                        margin-top: 0;
+                        font-family: $logo-font;
+                        font-size: rem(35px);
+                        color:$color-white;
+                        letter-spacing: 1px;
+                }
+             
                 
         }
