--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -26,7 +26,7 @@
     flex-direction: column;
   }
   &.gap{
-    gap:rem(10px);
+    // gap:rem(10px);
   }
   &.wrap {
     flex-wrap: wrap;
